@@ -1,5 +1,9 @@
 April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
+	* itemba.cpp/h, itemde.cpp/h, charba.cpp, charde.cpp: Stack parameter removed from Apply funcs
+
+April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>
+
 	* charba.cpp/h, charde.cpp/h, itemde.cpp/h, stack.cpp, slot.cpp/h: Bodyparts are now correctly in characterslots
 
 April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>
